--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
 		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+		<link type="text/css" rel="stylesheet" href="/store/css/bootstrap.min.css"/>
 
 		<!-- Slick -->
-		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
-		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
+		<link type="text/css" rel="stylesheet" href="/store/css/slick.css"/>
+		<link type="text/css" rel="stylesheet" href="/store/css/slick-theme.css"/>
 
 		<!-- nouislider -->
-		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
+		<link type="text/css" rel="stylesheet" href="/store/css/nouislider.min.css"/>
 
 		<!-- Font Awesome Icon -->
-		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="/store/css/font-awesome.min.css">
 
 		<!-- Custom stlylesheet -->
-		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+		<link type="text/css" rel="stylesheet" href="/store/css/style.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,7 +48,7 @@
 					</ul>
 					<ul class="header-links pull-right">
 						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-						<li><a href="login.html"><i class="fa fa-user-o"></i> Mi Cuenta</a></li>
+						<li><a href="#"><i class="fa fa-user-o"></i> Mi Cuenta</a></li>
 					</ul>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="/" class="logo">
-									<img src="./img/logo.png" alt="Logo de la empresa">
+									<img src="/store/img/logo.png" alt="Logo de la empresa">
 								</a>
 							</div>
 						</div>
@@ -91,7 +91,7 @@
 							<div class="header-ctn">
 								<!-- Wishlist -->
 								<div>
-									<a href="wishlist.html">
+									<a href="#">
 										<i class="fa fa-heart-o"></i>
 										<span>Deseados</span>
 										<div class="qty">2</div>
@@ -110,7 +110,7 @@
 										<div class="cart-list">
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./img/product01.png" alt="">
+													<img src="/store/img/product01.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -121,7 +121,7 @@
 
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./img/product02.png" alt="">
+													<img src="/store/img/product02.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -136,7 +136,7 @@
 										</div>
 										<div class="cart-btns">
 											<a href="#">Ver Carrito</a>
-											<a href="#">Comprar  <i class="fa fa-arrow-circle-right"></i></a>
+											<a href="/checkout/">Comprar  <i class="fa fa-arrow-circle-right"></i></a>
 										</div>
 									</div>
 								</div>
@@ -193,7 +193,7 @@
 					<div class="col-md-4 col-xs-6">
 						<div class="shop">
 							<div class="shop-img">
-								<img src="./img/shop01.png" alt="">
+								<img src="/store/img/shop01.png" alt="">
 							</div>
 							<div class="shop-body">
 								<h3>Laptop<br>Colección</h3>
@@ -207,7 +207,7 @@
 					<div class="col-md-4 col-xs-6">
 						<div class="shop">
 							<div class="shop-img">
-								<img src="./img/shop03.png" alt="">
+								<img src="/store/img/shop03.png" alt="">
 							</div>
 							<div class="shop-body">
 								<h3>Accessories<br>Colección</h3>
@@ -221,7 +221,7 @@
 					<div class="col-md-4 col-xs-6">
 						<div class="shop">
 							<div class="shop-img">
-								<img src="./img/shop02.png" alt="">
+								<img src="/store/img/shop02.png" alt="">
 							</div>
 							<div class="shop-body">
 								<h3>Cameras<br>Colección</h3>
@@ -270,7 +270,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product01.png" alt="">
+												<img src="/store/img/product01.png" alt="">
 												<div class="product-label">
 													<span class="sale">-30%</span>
 													<span class="new">NUEVO</span>
@@ -302,7 +302,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product02.png" alt="">
+												<img src="/store/img/product02.png" alt="">
 												<div class="product-label">
 													<span class="new">NUEVO</span>
 												</div>
@@ -333,7 +333,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product03.png" alt="">
+												<img src="/store/img/product03.png" alt="">
 												<div class="product-label">
 													<span class="sale">-30%</span>
 												</div>
@@ -359,7 +359,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product04.png" alt="">
+												<img src="/store/img/product04.png" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Categoría</p>
@@ -387,7 +387,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product05.png" alt="">
+												<img src="/store/img/product05.png" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Categoría</p>
@@ -505,7 +505,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product06.png" alt="">
+												<img src="/store/img/product06.png" alt="">
 												<div class="product-label">
 													<span class="sale">-30%</span>
 													<span class="new">NUEVO</span>
@@ -537,7 +537,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product07.png" alt="">
+												<img src="/store/img/product07.png" alt="">
 												<div class="product-label">
 													<span class="new">NUEVO</span>
 												</div>
@@ -568,7 +568,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product08.png" alt="">
+												<img src="/store/img/product08.png" alt="">
 												<div class="product-label">
 													<span class="sale">-30%</span>
 												</div>
@@ -594,7 +594,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product09.png" alt="">
+												<img src="/store/img/product09.png" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Categoría</p>
@@ -622,7 +622,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product01.png" alt="">
+												<img src="/store/img/product01.png" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Categoría</p>
@@ -680,7 +680,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product07.png" alt="">
+										<img src="/store/img/product07.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -693,7 +693,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product08.png" alt="">
+										<img src="/store/img/product08.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -706,7 +706,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product09.png" alt="">
+										<img src="/store/img/product09.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -721,7 +721,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product01.png" alt="">
+										<img src="/store/img/product01.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -734,7 +734,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product02.png" alt="">
+										<img src="/store/img/product02.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -747,7 +747,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product03.png" alt="">
+										<img src="/store/img/product03.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -773,7 +773,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product04.png" alt="">
+										<img src="/store/img/product04.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -786,7 +786,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product05.png" alt="">
+										<img src="/store/img/product05.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -799,7 +799,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product06.png" alt="">
+										<img src="/store/img/product06.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -814,7 +814,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product07.png" alt="">
+										<img src="/store/img/product07.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -827,7 +827,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product08.png" alt="">
+										<img src="/store/img/product08.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -840,7 +840,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product09.png" alt="">
+										<img src="/store/img/product09.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -868,7 +868,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product01.png" alt="">
+										<img src="/store/img/product01.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -881,7 +881,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product02.png" alt="">
+										<img src="/store/img/product02.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -894,7 +894,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product03.png" alt="">
+										<img src="/store/img/product03.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -909,7 +909,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product04.png" alt="">
+										<img src="/store/img/product04.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -922,7 +922,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product05.png" alt="">
+										<img src="/store/img/product05.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -935,7 +935,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product06.png" alt="">
+										<img src="/store/img/product06.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -1086,14 +1086,14 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>
-		<script src="js/jquery.zoom.min.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/nostra.js"></script>
-		<script src="js/nostra.js"></script>
+		<script src="/store/js/jquery.min.js"></script>
+		<script src="/store/js/bootstrap.min.js"></script>
+		<script src="/store/js/slick.min.js"></script>
+		<script src="/store/js/nouislider.min.js"></script>
+		<script src="/store/js/jquery.zoom.min.js"></script>
+		<script src="/store/js/main.js"></script>
+		<script src="/store/js/nostra.js"></script>
+		<script src="/store/js/nostra.js"></script>
 
 	</body>
 </html>
