--- a/store/store.html
+++ b/store/store.html
@@ -12,20 +12,20 @@
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
  		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="/store/css/bootstrap.min.css"/>
 
  		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
- 		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
+ 		<link type="text/css" rel="stylesheet" href="/store/css/slick.css"/>
+ 		<link type="text/css" rel="stylesheet" href="/store/css/slick-theme.css"/>
 
  		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="/store/css/nouislider.min.css"/>
 
  		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="css/font-awesome.min.css">
+ 		<link rel="stylesheet" href="/store/css/font-awesome.min.css">
 
  		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="/store/css/style.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -64,7 +64,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="/" class="logo">
-									<img src="./img/logo.png" alt="">
+									<img src="/store/img/logo.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -110,7 +110,7 @@
 										<div class="cart-list">
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./img/product01.png" alt="">
+													<img src="/store/img/product01.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -121,7 +121,7 @@
 
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./img/product02.png" alt="">
+													<img src="/store/img/product02.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -355,7 +355,7 @@
 							<h3 class="aside-title">Top de Ventas</h3>
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/product01.png" alt="">
+									<img src="/store/img/product01.png" alt="">
 								</div>
 								<div class="product-body">
 									<p class="product-category">Categoría</p>
@@ -366,7 +366,7 @@
 
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/product02.png" alt="">
+									<img src="/store/img/product02.png" alt="">
 								</div>
 								<div class="product-body">
 									<p class="product-category">Categoría</p>
@@ -377,7 +377,7 @@
 
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/product03.png" alt="">
+									<img src="/store/img/product03.png" alt="">
 								</div>
 								<div class="product-body">
 									<p class="product-category">Categoría</p>
@@ -424,7 +424,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product01.png" alt="">
+										<img src="/store/img/product01.png" alt="">
 										<div class="product-label">
 											<span class="sale">-30%</span>
 											<span class="new">NUEVO</span>
@@ -458,7 +458,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product02.png" alt="">
+										<img src="/store/img/product02.png" alt="">
 										<div class="product-label">
 											<span class="new">NUEVO</span>
 										</div>
@@ -493,7 +493,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product03.png" alt="">
+										<img src="/store/img/product03.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -520,7 +520,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product04.png" alt="">
+										<img src="/store/img/product04.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -547,7 +547,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product05.png" alt="">
+										<img src="/store/img/product05.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -572,7 +572,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product06.png" alt="">
+										<img src="/store/img/product06.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -604,7 +604,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product07.png" alt="">
+										<img src="/store/img/product07.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -634,7 +634,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product08.png" alt="">
+										<img src="/store/img/product08.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -661,7 +661,7 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product09.png" alt="">
+										<img src="/store/img/product09.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Categoría</p>
@@ -836,13 +836,13 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>
-		<script src="js/jquery.zoom.min.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/nostra.js"></script>
+		<script src="/store/js/jquery.min.js"></script>
+		<script src="/store/js/bootstrap.min.js"></script>
+		<script src="/store/js/slick.min.js"></script>
+		<script src="/store/js/nouislider.min.js"></script>
+		<script src="/store/js/jquery.zoom.min.js"></script>
+		<script src="/store/js/main.js"></script>
+		<script src="/store/js/nostra.js"></script>
 
 	</body>
 </html>
