--- a/admin/login.html
+++ b/admin/login.html
@@ -12,20 +12,20 @@
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
  		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="./static/css/bootstrap.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css"/>
 
  		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="./static/css/slick.css"/>
- 		<link type="text/css" rel="stylesheet" href="./static/css/slick-theme.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../static/css/slick.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../static/css/slick-theme.css"/>
 
  		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="./static/css/nouislider.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../static/css/nouislider.min.css"/>
 
  		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="./static/css/font-awesome.min.css">
+ 		<link rel="stylesheet" href="../static/css/font-awesome.min.css">
 
  		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="./static/css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../static/css/style.css"/>
 
  		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
  		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,7 +34,7 @@
  		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
  		<![endif]-->
 
-    </head>
+  </head>
 	<body>
 		<!-- HEADER -->
 		<header>
@@ -110,7 +110,7 @@
 										<div class="cart-list">
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./static/img/product01.png" alt="">
+													<img src="../static/img/product01.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -121,7 +121,7 @@
 
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./static/img/product02.png" alt="">
+													<img src="../static/img/product02.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -193,10 +193,10 @@
 				<!-- row -->
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="breadcrumb-header">Regular Page</h3>
+						<h3 class="breadcrumb-header">Acceder</h3>
 						<ul class="breadcrumb-tree">
-							<li><a href="#">Home</a></li>
-							<li class="active">Blank</li>
+							<li><a href="#">Inicio</a></li>
+							<li class="active">Acceder</li>
 						</ul>
 					</div>
 				</div>
@@ -235,7 +235,7 @@
 								<input type="password" class="form-control" id="password" required>
 							</div>
 							<div class="text-center">
-								<button type="submit" class="btn btn-primary btn-block" style="background-color: #D10024; color: #FFF; border: none;">Acceder</button>
+								<button type="submit" class="btn btn-primary btn-block login-register">Acceder</button>
 							</div>
 							<div id="loginMessage" class="text-danger text-center" style="margin-top:10px;"></div>
 						</form>
@@ -378,13 +378,13 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="./static/js/jquery.min.js"></script>
-		<script src="./static/js/bootstrap.min.js"></script>
-		<script src="./static/js/slick.min.js"></script>
-		<script src="./static/js/nouislider.min.js"></script>
-		<script src="./static/js/jquery.zoom.min.js"></script>
-		<script src="./static/js/main.js"></script>
-		<script src="./static/js/nostra.js"></script>
+		<script src="../static/js/jquery.min.js"></script>
+		<script src="../static/js/bootstrap.min.js"></script>
+		<script src="../static/js/slick.min.js"></script>
+		<script src="../static/js/nouislider.min.js"></script>
+		<script src="../static/js/jquery.zoom.min.js"></script>
+		<script src="../static/js/main.js"></script>
+		<script src="../static/js/nostra.js"></script>
 
 	</body>
 </html>
