--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-    </head>
+  </head>
 	<body>
 		<!-- HEADER -->
 		<header>
@@ -48,7 +48,7 @@
 					</ul>
 					<ul class="header-links pull-right">
 						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-						<li><a href="#"><i class="fa fa-user-o"></i> Mi Cuenta</a></li>
+						<li><a href="/login/"><i class="fa fa-user-o"></i> Mi Cuenta</a></li>
 					</ul>
 				</div>
 			</div>
@@ -90,8 +90,8 @@
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
 								<!-- Wishlist -->
-								<div>
-									<a href="#">
+								<div class="wishlist">
+									<a href="/wishlist/">
 										<i class="fa fa-heart-o"></i>
 										<span>Deseados</span>
 										<div class="qty">2</div>
@@ -171,7 +171,7 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="/">Inicio</a></li>
-						<li><a href="#">Tienda</a></li>
+						<li><a href="/store/">Tienda</a></li>
 						<li><a href="#">Ofertas</a></li>
 						<li><a href="#">Categorías</a></li>
 					</ul>
@@ -1094,6 +1094,5 @@
 		<script src="./static/js/main.js"></script>
 		<script src="./static/js/nostra.js"></script>
 		<script src="./static/js/nostra.js"></script>
-
 	</body>
 </html>
