--- a/store_files/checkout.html
+++ b/store_files/checkout.html
@@ -63,7 +63,7 @@
             <!-- LOGO -->
             <div class="col-md-3">
               <div class="header-logo">
-                <a href="/" class="logo">
+                <a href="/electronicstore/" class="logo">
                   <img src="../static/img/logo.png" alt="">
                 </a>
               </div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="cart-btns">
                       <a href="#">Ver Carrito</a>
-                      <a href="#">Comprar  <i class="fa fa-arrow-circle-right"></i></a>
+                      <a href="./checkout.html">Comprar  <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                   </div>
                 </div>
