--- a/store_files/store.html
+++ b/store_files/store.html
@@ -63,7 +63,7 @@
             <!-- LOGO -->
             <div class="col-md-3">
               <div class="header-logo">
-                <a href="/" class="logo">
+                <a href="/electronicstore/" class="logo">
                   <img src="../static/img/logo.png" alt="">
                 </a>
               </div>
@@ -170,8 +170,8 @@
         <div id="responsive-nav">
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
-            <li class="active"><a href="/electronicstore/">Inicio</a></li>
-            <li><a href="./store_files/store.html">Tienda</a></li>
+            <li><a href="/electronicstore/">Inicio</a></li>
+            <li class="active"><a href="./store.html">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
           </ul>
